Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92521

WASM: QToolTips occasionally makes app exception

XMLWordPrintable

    • WebAssembly
    • a18ef048374c339023305c63600bd3c4d61b858b (qt/tqtc-qtbase/5.15) 9a31dada02 (qt/tqtc-qtbase/6.3)

      Testing the widgets gallery app for tooltips, moving the mouse sometimes causes the app to cause an exception:
       

      Uncaught RuntimeError: index out of bounds

       

      Backtracing seems to lead to several places. App seems to keep running most of the time.

        1. wasm-tooltips-crash-bt.txt
          9 kB
          Lorn Potter
        2. wasm-tooltips-crash-2.txt
          12 kB
          Lorn Potter
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lpotter Lorn Potter
            lpotter Lorn Potter
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: