wasm: Fix assert/crash when tooltip window is closed and mouse moved

Fixes: QTBUG-92521
Change-Id: I627fdcf3064321a3c1cb1140473038571ec78b9e
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 9a31dada02929e54423dc839245e8fcfb52db235)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>