src/plugins/platforms/wasm/qwasmeventtranslator.h
@@ -82,9 +82,9 @@ private:
     QMap <int, QPointF> pressedTouchIds;
 
 private:
-    QWindow *draggedWindow;
-    QWindow *pressedWindow;
-    QWindow *lastWindow;
+    QPointer<QWindow> draggedWindow;
+    QPointer<QWindow> pressedWindow;
+    QPointer<QWindow> lastWindow;
     Qt::MouseButtons pressedButtons;
 
     QWasmWindow::ResizeMode resizeMode;
